# SateliteSelect

./: .gitignore  README.md  SateliteSelect.sln
SateliteSelect/: .gitignore  Astro.cpp  CMakeLists.txt  Math.cpp  SateliteSelect.vcxproj  SateliteSelect.vcxproj.filters  Satselect.cpp  Satselect.h  Sgpsdp.cpp  Sgpsdp.h  Source.cpp  TLE.txt  Utils.cpp  main.cpp  myVector.h  observer.cpp  time.cpp  vector.h
SateliteSelect/sgp17src/: Sgpsdp.mdp
cpp/cpp/JustCode/: EopSpw.cpp  EopSpw.h
cpp/cpp/SGP4/SGP4/: SGP4.cpp  SGP4.vcxproj  SGP4.vcxproj.filters  main.cpp
cpp/cpp/SGP4DC/SGP4DC/: SGP4DC.cpp  SGP4DC.vcxproj
cpp/cpp/astPert/astPert/: astPert.cpp  astPert.h
cpp/cpp/astrolib/AstroLib/: AstroLib.cpp  AstroLib.h  AstroLib.vcxproj
cpp/cpp/mathtimelib/MathTimeLib/: MathTimeLib.cpp  MathTimeLib.h
sgp17src/: Sgpsdp.cpp  Sgpsdp.h  observer.cpp
